--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-h1{
-    font-size: large;
-    color: purple;
-    font-weight: bold;
+h1 {
+  text-align: center;
+  color: purple;
+  font-weight: bold;
 }
